# weclaw

./: .env  .gitignore  LICENSE  README.md  models.yaml  pyproject.toml
docs/: context-summarization.md  langsmith-tracing.md  mcp-skill-guide.md  ollama-guide.md  telegram-bot.md  timer-job-guide.md  toolmessage-compression.md  websocket-channel.md
src/weclaw/: __init__.py  main.py
src/weclaw/adapters/: __init__.py  base.py  feishu_adapter.py  feishu_client.py  telegram_adapter.py
src/weclaw/agent/: agent.py  client.py  graph.py  main.py  mcp_client.py  media_processor.py  prompts.py  runtime.py  skill_manager.py  skill_operations.py  subagents.py  tools.py
src/weclaw/agent/handlers/: __init__.py  base.py  env_handler.py  model_handler.py  persona_handler.py  skill_handler.py
src/weclaw/cli/: doctor.py  install.py  installers.py  main.py
src/weclaw/gateway/: protocol.py  server.py  session.py
src/weclaw/media/: __init__.py  base.py  factory.py  prompts.py
src/weclaw/media/processors/: __init__.py  dashscope_processor.py  openai_processor.py
src/weclaw/server/: server.py
src/weclaw/skill_mgr/: manager.py  operations.py
src/weclaw/skills/1password/: SKILL.md
src/weclaw/utils/: agent_config.py  command.py  console.py  context_optimizer.py  env_file.py  job_scheduler.py  message.py  model_registry.py  ollama_provider.py  paths.py
web/: index.html  package.json  vite.config.js
web/src/: App.vue  main.js
web/src/composables/: useWebSocket.js
web/src/styles/: global.css
web/src/views/: ChatView.vue  SkillsView.vue
(+15 files in other folders)
